--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,40 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar{
+   background-color: black;
+   height: 50px;
+}
+
+.navbar-brand{
+  position: relative;
+  bottom: -12px;
+  right: -36px;
+  color: white;
+  background-color: black;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.Box{
+   width: 350px;
+   height: 150px;
+   position: relative;
+   bottom: -140px;
+   border: 1px solid black;
+   right: -520px;
+}
+
+.btn{
+   position: relative;
+   right: -110px;
+   bottom: -60px;
+   width: 120px;
+   height: 40px;
+   background-color: #61dafb;
+}
+
+.btn{
+  text-decoration: none;
+}
